# gl-demo

./: .build.yml  Cargo.toml  LICENSE  README.md  heightmap-lod-notes.md  heightmap-notes.md
data/: fragment_shader.frag  materials.mtl  vertex_shader.vert
src/: display_math.rs  geometry.rs  linear_algebra.rs  main.rs  models.rs  physics.rs  renderable.rs  shader_source.rs  teapot.rs
src/linear_algebra/: mat3.rs  mat4.rs  mod.rs  vec3.rs  vec4.rs
src/model/: disk.rs  gpu.rs  heightmap.rs  library.rs  mem.rs  mod.rs
src/model/heightmap/: mod.rs  simpleheightmap.rs
